        PR target/16298         * config/i386/i386.c (legitimate_constant_p): Rework to not accept         random codes within CONST.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@86522 138bc75d-0d04-0410-961f-82ee72b054a4